2005-09-05  Petr Mikulik  <mikulik@physics.muni.cz>

	* command.c (print_show_output): Make the test to print_out, not
	print_out_name (failed for stdout).

2005-09-05  Geoffrey Hausheer  <ghaushe@users.sourceforge.net>

	SF patch [1264939] Adds bilinear interpolation to pm3d surfaces

	* demo/pm3d.dem docs/gnuplot.doc src/pm3d.c src/pm3d.h src/save.c
	src/set.c src/show.c src/tables.c src/tables.h NEWS: When using pm3d
	with data files (rather than functions), a single color is used for
	each quadrangle (unless dgrid is used, but then you get weighted
	averages instead). This patch does bilinear interpolation to subdivide
	each quadrangle into nxn smaller quadrangles, and sets the color of
	each one independantly.

2005-08-30  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.dj2 (TERMLIBS): Updated to current version of GRX.
	(LINKOPT): Fix it to actually use $(TERMLIBS).
	(CFLAGS): Add -DHAVE_SYS_STAT_H.

2005-08-30  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/os2/gclient.c (ReadGnu): implement stubs in pm terminal to
	map RGB colors to nearest color from current pm3d palette
	
2005-08-22  Ethan Merritt  <merritt@u.washington.edu>

        * src/color.c src/color.h: New routine set_rgbcolor().

	* src/misc.c (parse_colorspec) src/graph3d.c: Allow color
	specification "rgb variable", in which case the RGB color is taken
	from an additional field of the "using" specifier.

	* docs/gnuplot.doc demo/rgb_variable.dat demo/rgb_variable.dem NEWS:
	Explain and give example of reading rgb color from input data field.

2005-08-19  Ethan Merritt  <merritt@u.washington.edu>

        * src/plot3d.c (get_3ddata) src/graph3d.c(plot3d_points): 
	Variable pointsize should be honored in plot style "linespoints" 
	exactly as in style "points".

2005-08-17  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

        * docs/gnuplot.doc (multiplot): Extend description of how
        multiplot actually works on interactive displays.  Place a hint