@@ -1,5 +1,8 @@
 2005-09-05  Petr Mikulik  <mikulik@physics.muni.cz>
 
+	* show.c (show_palette_palette): Take care that print_out is stderr for
+	for both NULL and stderr.
+
 	* command.c (print_show_output): Make the test to print_out, not
 	print_out_name (failed for stdout).
 
